{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 856,
  "lineage": "17d42b56-6ea0-ca6f-1292-70c99f478f58",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:internet-gateway/igw-0eabbbf762d14664c",
            "id": "igw-0eabbbf762d14664c",
            "owner_id": "115553109071",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-091d8c90a8ba978c9"
          },
          "dependencies": [
            "aws_vpc.nondefault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:route-table/rtb-0146991f86a550220",
            "id": "rtb-0146991f86a550220",
            "owner_id": "115553109071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eabbbf762d14664c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rtb"
            },
            "tags_all": {
              "Name": "public-rtb"
            },
            "vpc_id": "vpc-091d8c90a8ba978c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.nondefault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rtb-assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f487eac6b9dd6aa6",
            "route_table_id": "rtb-0146991f86a550220",
            "subnet_id": "subnet-0246b4b93c8308910"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rtb",
            "aws_subnet.nondefault_1",
            "aws_vpc.nondefault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rtb-assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eff3cd7d07550489",
            "route_table_id": "rtb-0146991f86a550220",
            "subnet_id": "subnet-0a2d4ecf8228e2c82"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rtb",
            "aws_subnet.nondefault_2",
            "aws_vpc.nondefault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nondefault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:security-group/sg-08195031ddd38a9fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08195031ddd38a9fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20210620115639077300000001",
            "name_prefix": "terraform-",
            "owner_id": "115553109071",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091d8c90a8ba978c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nondefault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "unused",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:security-group/sg-04573fd71f10fc2b9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04573fd71f10fc2b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "Unused security group",
            "name_prefix": "",
            "owner_id": "115553109071",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091d8c90a8ba978c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nondefault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nondefault_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-0246b4b93c8308910",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.128/25",
            "id": "subnet-0246b4b93c8308910",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "115553109071",
            "vpc_id": "vpc-091d8c90a8ba978c9"
          },
          "dependencies": [
            "aws_vpc.nondefault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nondefault_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-0a2d4ecf8228e2c82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/25",
            "id": "subnet-0a2d4ecf8228e2c82",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "115553109071",
            "vpc_id": "vpc-091d8c90a8ba978c9"
          },
          "dependencies": [
            "aws_vpc.nondefault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nondefault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:vpc/vpc-091d8c90a8ba978c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.1.0/24",
            "default_network_acl_id": "acl-0e8181a230e79d22e",
            "default_route_table_id": "rtb-05bf8cfe74d7bc81f",
            "default_security_group_id": "sg-04edfba1187c038e3",
            "dhcp_options_id": "dopt-3045214a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-091d8c90a8ba978c9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05bf8cfe74d7bc81f",
            "owner_id": "115553109071"
          }
        }
      ]
    }
  ]
}